some more spacing in multi-dir view

--- a/themes/fuckflickr/css/stylesheet.css
+++ b/themes/fuckflickr/css/stylesheet.css
@@ -1,10 +1,10 @@
 /*
-##############################################################
-##		___              __     ___ __ __        __           ##
-##	.'  _|.--.--.----.|  |--.'  _|  |__|.----.|  |--.----.  ##
-##	|   _||  |  |  __||    <|   _|  |  ||  __||    <|   _|  ##
-##	|__|  |_____|____||__|__|__| |__|__||____||__|__|__|    ##
-##############################################################
+#############################################################
+##   ___              __     ___ __ __        __           ##
+## .'  _|.--.--.----.|  |--.'  _|  |__|.----.|  |--.----.  ##
+## |   _||  |  |  __||    <|   _|  |  ||  __||    <|   _|  ##
+## |__|  |_____|____||__|__|__| |__|__||____||__|__|__|    ##
+#############################################################
         default fuckflickr theme - HACK AWAY MOFO
 */
 
@@ -172,7 +172,7 @@ p, h1, h2, h3, h4, h5 {
   overflow: hidden;
   text-align: center; 
   background-color: black;
-  margin-right: 6px;
+  margin: 0 6px 5px 0;
   padding-top: 10px;
   text-decoration: none;
 }
