--- a/themes/fuckflickr/css/stylesheet.css
+++ b/themes/fuckflickr/css/stylesheet.css
@@ -128,6 +128,19 @@ p, h1, h2, h3, h4, h5 {
   border: 1px solid #000;
 }
 
+h1#title {
+  margin: 5px 0 3px 0; 
+  padding: 0; 
+  font-size: 24px; 
+  line-height: 27px;
+}
+h3#description {
+  font-size: 13px; 
+  margin: 5px 0 3px 0; 
+  padding: 0; 
+  line-height: 15px; 
+  font-weight: normal;
+}
 
 
 
@@ -181,6 +194,7 @@ p, h1, h2, h3, h4, h5 {
 .video .meta a { color: white; }
 .video input.embed-code { background-color: #eee; color: #777; border: 1px solid #999; padding: 2px; }
 
+
 /* ..... */
 .preview a { /* given a background-image dynamically */
   float: left;
@@ -209,32 +223,13 @@ p, h1, h2, h3, h4, h5 {
   padding: 2px 4px;
 }
 
-.info {
-/*  min-height:80px;*/
-  font-size: 9px; /* non-gecko rendering engines actually go down to 1px; don't use that */ 
-}
-
+.info { font-size: 9px; }
 .description { padding: 8px 0 0 0;}
 .meta { padding: 0; margin-bottom: 30px; }
 
-.hi-res { margin-left: 5px; } /* give the man some elbow room geeze */
+.hi-res { margin-left: 5px; }
 .embed { margin-left: 8px; }
 
-
-/* I think this stuff is new and needs to be grouped elsewhere TODO */
-h1#title {
-  margin: 5px 0 3px 0; 
-  padding: 0; 
-  font-size: 24px; 
-  line-height: 27px;
-}
-h3#description {
-  font-size: 13px; 
-  margin: 5px 0 3px 0; 
-  padding: 0; 
-  line-height: 15px; 
-  font-weight: normal;
-}
 
 
 
